added new example to examples section

--- a/_posts/user_guide_python/new_py_guide.ipynb
+++ b/_posts/user_guide_python/new_py_guide.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +39,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -79,7 +79,7 @@
        "  'yaxis': {'title': 'x2'}}}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -113,7 +113,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -153,7 +153,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 59,
    "metadata": {
     "collapsed": true
    },
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -304,7 +304,7 @@
        "  'y': [4, 5, 6]}]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -339,7 +339,7 @@
        " 'y': [4, 5, 6]}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -374,7 +374,7 @@
        "        0.84672005])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
@@ -414,7 +414,7 @@
        "          0.84672005])}]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
@@ -441,7 +441,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -478,7 +478,7 @@
        "{'title': 'First Plot', 'xaxis': {'title': 'x1'}, 'yaxis': {'title': 'x2'}}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -519,7 +519,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -556,7 +556,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
@@ -647,7 +647,7 @@
        "  'yaxis': {'title': 'x2'}}}"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -1253,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -1265,7 +1265,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mPlotlyDictKeyError\u001b[0m                        Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-43-f20e7994a2f4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mScatter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmarkers\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'blue'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-71-f20e7994a2f4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mScatter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmarkers\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'blue'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/plotly/graph_objs/graph_objs.pyc\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    373\u001b[0m         \u001b[0md\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mval\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    374\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval\u001b[0m \u001b[0;32min\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 375\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__setitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_raise\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0m_raise\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    376\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    377\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__dir__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/plotly/graph_objs/graph_objs.pyc\u001b[0m in \u001b[0;36m__setitem__\u001b[0;34m(self, key, value, _raise)\u001b[0m\n\u001b[1;32m    424\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0m_raise\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    425\u001b[0m                     \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_path\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 426\u001b[0;31m                     \u001b[0;32mraise\u001b[0m \u001b[0mexceptions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPlotlyDictKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    427\u001b[0m                 \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    428\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mPlotlyDictKeyError\u001b[0m: 'markers' is not allowed in 'scatter'\n\nPath To Error: ['markers']\n\nValid attributes for 'scatter' at path [] under parents []:\n\n    ['textposition', 'uid', 'stream', 'ysrc', 'hoverinfo', 'xsrc',\n    'visible', 'marker', 'y0', 'tsrc', 'line', 'fill', 'showlegend',\n    'error_x', 'error_y', 'rsrc', 'xaxis', 'text', 'type', 't', 'opacity',\n    'textfont', 'legendgroup', 'textpositionsrc', 'textsrc', 'dx', 'dy',\n    'x0', 'name', 'yaxis', 'connectgaps', 'r', 'mode', 'y', 'x',\n    'fillcolor']\n\nRun `<scatter-object>.help('attribute')` on any of the above.\n'<scatter-object>' is the object at []"
@@ -1380,6 +1380,253 @@
     "Check this out:\n",
     "[![Layout Options](https://cloud.githubusercontent.com/assets/12302455/14262589/51792702-fa84-11e5-8e3a-b606a0211838.png)](https://plot.ly/python/#layout-options)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As an example, say we looked at two different types of plots in the `heatmap` and the `box plots`, now equipped with the knowledge of subplots, we can easily two and two together in order to put both these on the same plotting surface (for no other reason than that we can). Let's first load the packages, and then set up the data for our heatmap trace."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from plotly import tools\n",
+    "import numpy as np\n",
+    "import plotly.plotly as py\n",
+    "import plotly.graph_objs as go\n",
+    "\n",
+    "heatmap = go.Heatmap(\n",
+    "        z=[[1, 20, 30],\n",
+    "           [20, 1, 60],\n",
+    "           [30, 60, 1]],\n",
+    "        showscale=False\n",
+    "        )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we'll set up the trace object for our wind rose chart, and note I'm just copying code from the example pages for each of these plot types."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "y0 = np.random.randn(50)\n",
+    "y1 = np.random.randn(50)+1\n",
+    "\n",
+    "box_1 = go.Box(\n",
+    "    y=y0\n",
+    ")\n",
+    "box_2 = go.Box(\n",
+    "    y=y1\n",
+    ")\n",
+    "data = [heatmap, box_1, box_2]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is the format of your plot grid:\n",
+      "[ (1,1) x1,y1 ]  [ (1,2) x2,y2 ]\n",
+      "[ (2,1) x3,y3           -      ]\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~kevintest/430.embed\" height=\"600px\" width=\"600px\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fig = tools.make_subplots(rows=2, cols=2, specs=[[{}, {}], [{'colspan': 2}, None]],\n",
+    "                          subplot_titles=('First Subplot','Second Subplot', 'Third Subplot'))\n",
+    "\n",
+    "fig.append_trace(box_1, 1, 1)\n",
+    "fig.append_trace(box_2, 1, 2)\n",
+    "fig.append_trace(heatmap, 2, 1)\n",
+    "\n",
+    "fig['layout'].update(height=600, width=600, title='i <3 subplots')\n",
+    "\n",
+    "py.iplot(fig, filename='make-subplots')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This looks great, however we'd like for our subplots to be on the same plotting surface. So let's take a look at the dictionary representation of our figure, and customize it using what we've learned before. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': [{'type': 'box',\n",
+       "   'xaxis': 'x1',\n",
+       "   'y': array([ 0.61482914,  0.44722515,  0.10640402,  2.50595425, -1.19150784,\n",
+       "          -1.42712647, -0.09442467, -0.94666899, -0.17893978,  2.43061635,\n",
+       "          -0.2840946 , -1.09908024,  0.65773279, -0.84681499,  1.04896778,\n",
+       "          -0.90785303,  0.53919494,  1.50048226,  0.39989202,  1.01360005,\n",
+       "           2.70019432, -1.24521511, -1.11632535,  0.36140258,  0.96617809,\n",
+       "           0.66588702, -1.43321236,  1.11043672,  0.31839874, -0.35971777,\n",
+       "          -1.59458515, -1.12306154,  0.54482576,  0.55945034,  1.18186808,\n",
+       "           0.84305955, -1.77494004,  0.57302099, -1.36302392, -0.59038036,\n",
+       "          -1.06943055,  0.87744537, -0.93299215, -1.06757737,  1.40893021,\n",
+       "          -0.98786112, -1.01156688, -0.14064728,  0.77541085, -0.14645258]),\n",
+       "   'yaxis': 'y1'},\n",
+       "  {'type': 'box',\n",
+       "   'xaxis': 'x2',\n",
+       "   'y': array([ 0.37739748,  0.75406333, -0.63547851, -0.38186817,  2.24065883,\n",
+       "           1.70011103,  1.89993445, -0.35252957,  0.51558408,  1.28702187,\n",
+       "          -0.17807999,  1.40942085,  0.42106472,  0.79258751, -0.51084844,\n",
+       "           2.61960449, -0.27362137,  2.80713966,  0.62678743,  1.02241888,\n",
+       "           3.56853961, -0.11360087,  1.25678368,  1.73870261,  2.02109178,\n",
+       "           0.2628768 ,  1.11249212,  1.25813905, -0.16166972,  1.63167952,\n",
+       "           1.53470042,  0.98237727, -0.55120284,  1.89423331,  0.89585118,\n",
+       "           0.94695862,  0.51826015, -0.30561981,  1.59706696,  0.62857279,\n",
+       "           2.10969811,  1.13964488,  1.04187617,  0.46767519,  0.91153006,\n",
+       "           0.90978197,  0.01482951, -0.0299817 ,  1.64041633,  2.24918518]),\n",
+       "   'yaxis': 'y2'},\n",
+       "  {'showscale': False,\n",
+       "   'type': 'heatmap',\n",
+       "   'xaxis': 'x3',\n",
+       "   'yaxis': 'y3',\n",
+       "   'z': [[1, 20, 30], [20, 1, 60], [30, 60, 1]]}],\n",
+       " 'layout': {'annotations': [{'font': {'size': 16},\n",
+       "    'showarrow': False,\n",
+       "    'text': 'First Subplot',\n",
+       "    'x': 0.225,\n",
+       "    'xanchor': 'center',\n",
+       "    'xref': 'paper',\n",
+       "    'y': 1.0,\n",
+       "    'yanchor': 'bottom',\n",
+       "    'yref': 'paper'},\n",
+       "   {'font': {'size': 16},\n",
+       "    'showarrow': False,\n",
+       "    'text': 'Second Subplot',\n",
+       "    'x': 0.775,\n",
+       "    'xanchor': 'center',\n",
+       "    'xref': 'paper',\n",
+       "    'y': 1.0,\n",
+       "    'yanchor': 'bottom',\n",
+       "    'yref': 'paper'},\n",
+       "   {'font': {'size': 16},\n",
+       "    'showarrow': False,\n",
+       "    'text': 'Third Subplot',\n",
+       "    'x': 0.5,\n",
+       "    'xanchor': 'center',\n",
+       "    'xref': 'paper',\n",
+       "    'y': 0.375,\n",
+       "    'yanchor': 'bottom',\n",
+       "    'yref': 'paper'}],\n",
+       "  'height': 600,\n",
+       "  'title': 'i <3 subplots',\n",
+       "  'width': 600,\n",
+       "  'xaxis1': {'anchor': 'y1', 'domain': [0.0, 0.45]},\n",
+       "  'xaxis2': {'anchor': 'y2', 'domain': [0.55, 1.0]},\n",
+       "  'xaxis3': {'anchor': 'y3', 'domain': [0.0, 1.0]},\n",
+       "  'yaxis1': {'anchor': 'x1', 'domain': [0.625, 1.0]},\n",
+       "  'yaxis2': {'anchor': 'x2', 'domain': [0.625, 1.0]},\n",
+       "  'yaxis3': {'anchor': 'x3', 'domain': [0.0, 0.375]}}}"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We actually see that the second boxplot has its own xaxis and yaxis. Thus we should unify it with the same axis as the first subplot. Then from the layout section, we should remove the additional xaxis and yaxis that are drawn for us. You can perform these steps seperately to see what I mean, but in this guide, I'll just show you the result of this edit/customization."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fig.data[1].yaxis = 'y1'\n",
+    "fig.data[1].xaxis = 'x1'\n",
+    "del fig.layout['xaxis2']\n",
+    "del fig.layout['yaxis2']\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And voila! We just put together some examples that we've never seen before, and customized out plot using what we learned throughout the guide!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~kevintest/430.embed\" height=\"600px\" width=\"600px\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "py.iplot(fig, filename='make-subplots')"
    ]
   },
   {
