fixed the fig edit

--- a/_posts/user_guide_python/new_py_guide.ipynb
+++ b/_posts/user_guide_python/new_py_guide.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 79,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +39,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false
    },
@@ -79,7 +79,7 @@
        "  'yaxis': {'title': 'x2'}}}"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false
    },
@@ -113,7 +113,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false
    },
@@ -153,7 +153,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 83,
    "metadata": {
     "collapsed": true
    },
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false
    },
@@ -304,7 +304,7 @@
        "  'y': [4, 5, 6]}]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 85,
    "metadata": {
     "collapsed": false
    },
@@ -339,7 +339,7 @@
        " 'y': [4, 5, 6]}"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 86,
    "metadata": {
     "collapsed": false
    },
@@ -374,7 +374,7 @@
        "        0.84672005])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 87,
    "metadata": {
     "collapsed": false
    },
@@ -414,7 +414,7 @@
        "          0.84672005])}]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 88,
    "metadata": {
     "collapsed": false
    },
@@ -441,7 +441,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 89,
    "metadata": {
     "collapsed": false
    },
@@ -478,7 +478,7 @@
        "{'title': 'First Plot', 'xaxis': {'title': 'x1'}, 'yaxis': {'title': 'x2'}}"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false
    },
@@ -519,7 +519,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false
    },
@@ -556,7 +556,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 92,
    "metadata": {
     "collapsed": false
    },
@@ -647,7 +647,7 @@
        "  'yaxis': {'title': 'x2'}}}"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 93,
    "metadata": {
     "collapsed": false
    },
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 94,
    "metadata": {
     "collapsed": false
    },
@@ -1253,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 95,
    "metadata": {
     "collapsed": false
    },
@@ -1265,7 +1265,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mPlotlyDictKeyError\u001b[0m                        Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-71-f20e7994a2f4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mScatter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmarkers\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'blue'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-95-f20e7994a2f4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mScatter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmarkers\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'blue'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/plotly/graph_objs/graph_objs.pyc\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    373\u001b[0m         \u001b[0md\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mval\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    374\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval\u001b[0m \u001b[0;32min\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 375\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__setitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_raise\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0m_raise\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    376\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    377\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__dir__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/plotly/graph_objs/graph_objs.pyc\u001b[0m in \u001b[0;36m__setitem__\u001b[0;34m(self, key, value, _raise)\u001b[0m\n\u001b[1;32m    424\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0m_raise\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    425\u001b[0m                     \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_path\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 426\u001b[0;31m                     \u001b[0;32mraise\u001b[0m \u001b[0mexceptions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPlotlyDictKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    427\u001b[0m                 \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    428\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mPlotlyDictKeyError\u001b[0m: 'markers' is not allowed in 'scatter'\n\nPath To Error: ['markers']\n\nValid attributes for 'scatter' at path [] under parents []:\n\n    ['textposition', 'uid', 'stream', 'ysrc', 'hoverinfo', 'xsrc',\n    'visible', 'marker', 'y0', 'tsrc', 'line', 'fill', 'showlegend',\n    'error_x', 'error_y', 'rsrc', 'xaxis', 'text', 'type', 't', 'opacity',\n    'textfont', 'legendgroup', 'textpositionsrc', 'textsrc', 'dx', 'dy',\n    'x0', 'name', 'yaxis', 'connectgaps', 'r', 'mode', 'y', 'x',\n    'fillcolor']\n\nRun `<scatter-object>.help('attribute')` on any of the above.\n'<scatter-object>' is the object at []"
@@ -1391,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 96,
    "metadata": {
     "collapsed": false
    },
@@ -1419,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 97,
    "metadata": {
     "collapsed": false
    },
@@ -1439,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 98,
    "metadata": {
     "collapsed": false
    },
@@ -1463,7 +1463,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1490,7 +1490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 99,
    "metadata": {
     "collapsed": false
    },
@@ -1500,29 +1500,29 @@
       "text/plain": [
        "{'data': [{'type': 'box',\n",
        "   'xaxis': 'x1',\n",
-       "   'y': array([ 0.61482914,  0.44722515,  0.10640402,  2.50595425, -1.19150784,\n",
-       "          -1.42712647, -0.09442467, -0.94666899, -0.17893978,  2.43061635,\n",
-       "          -0.2840946 , -1.09908024,  0.65773279, -0.84681499,  1.04896778,\n",
-       "          -0.90785303,  0.53919494,  1.50048226,  0.39989202,  1.01360005,\n",
-       "           2.70019432, -1.24521511, -1.11632535,  0.36140258,  0.96617809,\n",
-       "           0.66588702, -1.43321236,  1.11043672,  0.31839874, -0.35971777,\n",
-       "          -1.59458515, -1.12306154,  0.54482576,  0.55945034,  1.18186808,\n",
-       "           0.84305955, -1.77494004,  0.57302099, -1.36302392, -0.59038036,\n",
-       "          -1.06943055,  0.87744537, -0.93299215, -1.06757737,  1.40893021,\n",
-       "          -0.98786112, -1.01156688, -0.14064728,  0.77541085, -0.14645258]),\n",
+       "   'y': array([-0.91373828,  1.20546486, -0.096304  ,  2.37294867,  0.75779673,\n",
+       "          -0.85565264, -0.21226529, -0.15192424,  0.6870414 , -0.90325114,\n",
+       "           0.77816331, -2.14903403,  0.23682143,  0.47138943, -0.26381095,\n",
+       "          -1.72174484,  0.70897631,  1.19831382,  0.6537401 , -0.17682102,\n",
+       "          -0.74564104, -0.97780188, -1.87756116, -0.29443922,  0.45824652,\n",
+       "          -0.80421393, -0.41012153, -1.04762769,  0.42932349,  1.2102797 ,\n",
+       "           0.10064935,  0.38721905, -1.69759714,  0.30360933,  0.18920693,\n",
+       "           0.88070821,  0.06445955,  0.2453985 ,  0.42510519, -0.03765171,\n",
+       "           0.47967058,  1.37685937, -0.72184219,  0.65808692, -0.36645823,\n",
+       "           0.52223803, -0.03703202,  0.09859009,  0.46216406,  0.90797845]),\n",
        "   'yaxis': 'y1'},\n",
        "  {'type': 'box',\n",
        "   'xaxis': 'x2',\n",
-       "   'y': array([ 0.37739748,  0.75406333, -0.63547851, -0.38186817,  2.24065883,\n",
-       "           1.70011103,  1.89993445, -0.35252957,  0.51558408,  1.28702187,\n",
-       "          -0.17807999,  1.40942085,  0.42106472,  0.79258751, -0.51084844,\n",
-       "           2.61960449, -0.27362137,  2.80713966,  0.62678743,  1.02241888,\n",
-       "           3.56853961, -0.11360087,  1.25678368,  1.73870261,  2.02109178,\n",
-       "           0.2628768 ,  1.11249212,  1.25813905, -0.16166972,  1.63167952,\n",
-       "           1.53470042,  0.98237727, -0.55120284,  1.89423331,  0.89585118,\n",
-       "           0.94695862,  0.51826015, -0.30561981,  1.59706696,  0.62857279,\n",
-       "           2.10969811,  1.13964488,  1.04187617,  0.46767519,  0.91153006,\n",
-       "           0.90978197,  0.01482951, -0.0299817 ,  1.64041633,  2.24918518]),\n",
+       "   'y': array([ 1.39114565,  2.42361719,  0.74492841,  0.5796092 ,  0.70920041,\n",
+       "           1.84970903,  1.28910587,  2.46293187,  0.46195123, -0.01825562,\n",
+       "           2.60459886,  0.03786005,  1.11958395, -0.20198951, -1.09348176,\n",
+       "           1.8939656 , -0.72453807,  1.45243595,  2.39173323,  1.56600484,\n",
+       "           1.78916462,  1.61941803,  2.25792077,  0.89589498,  1.0673083 ,\n",
+       "           1.0942342 ,  0.42048992, -0.35346571,  0.59505795,  2.17376683,\n",
+       "           2.13342539,  0.59371436,  0.32297912,  0.35487172, -0.19119881,\n",
+       "           1.43115097,  0.2614727 ,  0.90561162,  1.84856626,  1.49876699,\n",
+       "           0.3717146 ,  0.03332516,  0.16060302, -1.63113126,  0.28004198,\n",
+       "           0.59134313,  1.76526806, -0.04537056,  1.8133062 ,  0.98513375]),\n",
        "   'yaxis': 'y2'},\n",
        "  {'showscale': False,\n",
        "   'type': 'heatmap',\n",
@@ -1567,7 +1567,7 @@
        "  'yaxis3': {'anchor': 'x3', 'domain': [0.0, 0.375]}}}"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1585,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -1601,12 +1601,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Now we still have to remove the annotation for the `Second Subplot` title, asell as the `First Subplot` title, and then extend the range of xaxis1 to the entire plotting surface."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "del fig.layout.annotations[0]\n",
+    "del fig.layout.annotations[1]\n",
+    "fig.layout.xaxis1.domain = [0.0, 1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "And voila! We just put together some examples that we've never seen before, and customized out plot using what we learned throughout the guide!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 114,
    "metadata": {
     "collapsed": false
    },
@@ -1620,7 +1640,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
