fixed filename issue to get two diff plots

--- a/_posts/user_guide_python/new_py_guide.ipynb
+++ b/_posts/user_guide_python/new_py_guide.ipynb
@@ -1439,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 116,
    "metadata": {
     "collapsed": false
    },
@@ -1457,13 +1457,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~kevintest/430.embed\" height=\"600px\" width=\"600px\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~kevintest/432.embed\" height=\"600px\" width=\"600px\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1478,7 +1478,7 @@
     "\n",
     "fig['layout'].update(height=600, width=600, title='i <3 subplots')\n",
     "\n",
-    "py.iplot(fig, filename='make-subplots')\n"
+    "py.iplot(fig, filename='box_heatmap1')\n"
    ]
   },
   {
@@ -1585,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {
     "collapsed": false
    },
@@ -1606,14 +1606,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "del fig.layout.annotations[0]\n",
-    "del fig.layout.annotations[1]\n",
+    "del fig.layout.annotations[0]   #deletes annotation for `First Subplot`\n",
+    "del fig.layout.annotations[0]   #deletes annotation for `Second Subplot` because of shift\n",
     "fig.layout.xaxis1.domain = [0.0, 1]"
    ]
   },
@@ -1626,7 +1626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 122,
    "metadata": {
     "collapsed": false
    },
@@ -1634,19 +1634,19 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~kevintest/430.embed\" height=\"600px\" width=\"600px\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~kevintest/434.embed\" height=\"600px\" width=\"600px\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "py.iplot(fig, filename='make-subplots')"
+    "py.iplot(fig, filename='box-heatmap-fixed')"
    ]
   },
   {
