post merge ipynb change: execution count

--- a/_posts/user_guide_python/python_streaming.ipynb
+++ b/_posts/user_guide_python/python_streaming.ipynb
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -828,6 +828,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
+     ]
     }
    ],
    "source": [
