--- a/_posts/user_guide_python/python_streaming.ipynb
+++ b/_posts/user_guide_python/python_streaming.ipynb
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Niw let's load the dependencies/packages that we need in order to get a simple stream going."
+    "Now let's load the dependencies/packages that we need in order to get a simple stream going."
    ]
   },
   {
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
